--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
   </div>
   <canvas id="canvas" width="700" height="500"></canvas>
   <canvas id="stackCanvas" width="300" height="500" style="background-color: black;"></canvas>
-  <script src="graham.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
